// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example build input type 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
export interface NonEmptyArray<A> extends Array<A> {
    0: A
}

export type MaybeArray<A> = A | Array<A>

export interface User {
  name: string
  id: string
  age?: number
  female?: boolean
  city?: 'dalian' | 'london' | 'newyork' | 'beijing'
}


"
`;

exports[`example build type 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
export interface NonEmptyArray<A> extends Array<A> {
    0: A
}

export type MaybeArray<A> = A | Array<A>

export interface User {
  name: string
  id: string
  age?: number
  female?: boolean
  city: 'dalian' | 'london' | 'newyork' | 'beijing'
}


"
`;

exports[`example build valid io 1`] = `
"/**
 * Code generated by github.com/macoolka/macoolka-gen-model, DO NOT EDIT.
 */
import * as t from 'macoolka-io'
export const User =t.intersection([  t.type({
    name:t.string,
    id:t.string,
    city:t.withDefault(t.keyof({\\"dalian\\":\\"\\",\\"london\\":\\"\\",\\"newyork\\":\\"\\",\\"beijing\\":\\"\\"}),\\"dalian\\"),
  })
,  t.partial({
    age:t.int,
    female:t.boolean,
  })
])



"
`;
